source3/winbindd/winbindd_util.c
@@ -698,7 +698,7 @@ static void rescan_forest_trusts( void )
 
 		if ( (flags & NETR_TRUST_FLAG_INBOUND) &&
 		     (type == LSA_TRUST_TYPE_UPLEVEL) &&
-		     (attribs == LSA_TRUST_ATTRIBUTE_FOREST_TRANSITIVE) )
+		     (attribs & LSA_TRUST_ATTRIBUTE_FOREST_TRANSITIVE) )
 		{
 			/* add the trusted domain if we don't know
 			   about it */
